--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #f07d9d;
+  --primary-color: #d14783;
   --secondary-color: #ffefd6;
   --alternative-color: #bf799d;
 }
