--- a/layouts/partials/index_profile.html
+++ b/layouts/partials/index_profile.html
@@ -53,7 +53,7 @@
             {{- end }}
         </div>
         <div style="font-size: small; font-style: italic; opacity: 80%; font-weight: lighter; margin: 10px;">
-            (Last updated: {{ now.Day }} {{ now.Month }} {{ now.Year }})
+            <!-- (Last updated: {{ now.Day }} {{ now.Month }} {{ now.Year }}) -->
         </div>
         {{- end }}
     </div>
